Commiting before merge w/latest version

--- a/utils/grid_theta_crab_cacheddir.cfg
+++ b/utils/grid_theta_crab_cacheddir.cfg
@@ -1,6 +1,6 @@
 [CRAB]
 jobtype = cmssw
-scheduler = remoteGlidein 
+scheduler = condor
 use_server = 0
 
 [CMSSW]
@@ -11,7 +11,7 @@ total_number_of_events=100
 number_of_jobs=$njobs
 
 [USER]
-script_exe = grid_theta_executable.sh 
+script_exe = grid_theta_executable.sh
 additional_input_files = gridpack.tgz,analysis.tgz,grid_theta_executable.py,$files
 ui_working_dir = dummy
 return_data = 1
